# storage/api-docs/api-docs.json
@@ -26,7 +26,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "apiKey": []
                     }
                 ]
             }
@@ -53,7 +53,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "apiKey": []
                     }
                 ]
             }
@@ -80,7 +80,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "apiKey": []
                     }
                 ]
             }
@@ -102,7 +102,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "apiKey": []
                     }
                 ]
             }
@@ -110,10 +110,10 @@
     },
     "components": {
         "securitySchemes": {
-            "bearerAuth": {
-                "type": "http",
-                "bearerFormat": "JWT",
-                "scheme": "bearer"
+            "apiKey": {
+                "type": "apiKey",
+                "name": "X-API-KEY",
+                "in": "header"
             }
         }
     },
